// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table editorjs block parser should return table with heading 1`] = `
<table class="de-table">
  <thead class="de-head">
    <tr class="de-row">
      <td class="de-cell">
        a
      </td>
      <td class="de-cell">
        b
      </td>
    </tr>
  </thead>
  <tbody class="de-body">
    <tr class="de-row">
      <td class="de-cell">
        c
      </td>
      <td class="de-cell">
        d
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`table editorjs block parser should return table without heading 1`] = `
<table class="de-table">
  <tbody class="de-body">
    <tr class="de-row">
      <td class="de-cell">
        a
      </td>
      <td class="de-cell">
        b
      </td>
    </tr>
    <tr class="de-row">
      <td class="de-cell">
        c
      </td>
      <td class="de-cell">
        d
      </td>
    </tr>
  </tbody>
</table>
`;
